# CTSeg3D-IKT213

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  requirements.txt  run_pipeline.py  setup.cfg
config/: default.yml
notebooks/: bias_corr.ipynb  guide.ipynb  preprocessing.ipynb  qc.ipynb
xctp/: metrics.py  pipeline.py  postprocess.py  preprocess.py  seeds.py  segment.py
xctp/utils/: multi_otsu.py  plot.py  tif.py
