[metadata]
name = CTSeg3D
version = 0.1.0
description = Automated filtering and segmentation pipeline for XCT data
author = Group 13
license = MIT

[options]
packages = find:
python_requires = >=3.9

[flake8]
max-line-length = 120
extend-ignore = E203, W503
exclude = .venv,build,dist,__pycache__,.git

[isort]
profile = black
line_length = 88
multi_line_output = 3
include_trailing_comma = true
skip = .venv,build,dist

[black]
line-length = 88
target-version = ['py39']
skip-string-normalization = true

[tool:pytest]
addopts = -ra -q
testpaths = tests

[mypy]
files = xctp,run_pipeline.py
ignore_missing_imports = true
strict_optional = true
disallow_untyped_defs = true
